// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-collection-document-by-id should get collection document by id 1`] = `
{
  "content": [],
  "isError": true,
  "structuredContent": {
    "detail": "The specified document is not configured as a collection",
    "operationStatus": "ContentNotCollection",
    "status": 400,
    "title": "The document item is not configured as a collection",
    "type": "Error",
  },
}
`;

exports[`get-collection-document-by-id should get collection document with filters 1`] = `
{
  "content": [],
  "isError": true,
  "structuredContent": {
    "detail": "The specified document is not configured as a collection",
    "operationStatus": "ContentNotCollection",
    "status": 400,
    "title": "The document item is not configured as a collection",
    "type": "Error",
  },
}
`;

exports[`get-collection-document-by-id should handle non-existent document 1`] = `
{
  "content": [],
  "isError": true,
  "structuredContent": {
    "operationStatus": "ContentNotFound",
    "status": 404,
    "title": "The specified document could not be found",
    "type": "Error",
  },
}
`;
